--- a/simpleui/templates/admin/home.html
+++ b/simpleui/templates/admin/home.html
@@ -20,7 +20,6 @@
                     <div class="clearfix">
                         {% if "SIMPLEUI_HOME_QUICK"|get_config != False %}
 
-
                         <div v-for="(c,j) in models" :key="c.name" class="quick-wrap">
                             <a href="javascript:;" @click="openTab(c,(j+1)+'')">
                                 <span class="icon" :class="c.icon"></span>
@@ -38,28 +37,26 @@
             <el-col :span="6">
                 <el-card class="box-card">
                     <div slot="header" class="clearfix">
-
-                        <span><i class="fab fa-stripe-s"></i>Simpleui <span
-                                v-text="getLanuage('Home page')"></span></span>
-                        <el-button style="float: right; padding: 3px 0" type="text" @click="report()"><span
-                                v-text="getLanuage('Report issue')"></span></el-button>
+                        <span><i class="fab fa-stripe-s"></i>项目地址</span>
                     </div>
                     <div class="float-wrap clearfix">
-                        <div style="text-align: center">
-                            {% get_app_info %}
-                            <a v-if="upgrade.isUpdate" href="javascript:;" @click="upgrade.dialogVisible=true"
-                               class="upgrade"><span class="el-icon-top"></span><span
-                                    v-text="upgrade.version"></span></a>
-                        </div>
-                        <el-button icon="fas fa-code" @click="openUrl('https://gitee.com/tompeppa/simpleui')">Gitee
-                        </el-button>
-                        <el-button icon="fab fa-github" @click="openUrl('https://github.com/newpanjing/simpleui')">
+<!--                        <div style="text-align: center">-->
+<!--                            {% get_app_info %}-->
+<!--                            <a v-if="upgrade.isUpdate" href="javascript:;" @click="upgrade.dialogVisible=true"-->
+<!--                               class="upgrade"><span class="el-icon-top"></span><span-->
+<!--                                    v-text="upgrade.version"></span></a>-->
+<!--                        </div>-->
+                        前端：Vue框架    后端：Django+DRF框架
+                        <el-button icon="fab fa-github" @click="openUrl('https://github.com/syz247179876/E_mall')">
                             Github
+                        </el-button>
+                        个人博客：
+                        <el-button  @click="openUrl('https://syzzjw.cn')">
+                            云博博客
                         </el-button>
                     </div>
                 </el-card>
             </el-col>
-
             {% endif %}
     </el-row>
 
@@ -67,7 +64,8 @@
     {% if "SIMPLEUI_HOME_ACTION"|get_config != False %}
     <el-card class="timeline">
         <div slot="header" class="clearfix">
-            <span>{% trans 'Recent actions' %}</span>
+<!--            <span>{% trans 'Recent actions' %}</span>-->
+            <span>最近行为</span>
             <el-button v-waves style="float: right; padding: 3px 0" type="text"
                        :icon="timeline?'el-icon-arrow-up':'el-icon-arrow-down'"
                        @click="displayTimeline()"></el-button>
@@ -93,6 +91,7 @@
     </el-card>
     {% endif %}
 </div>
+
 
 <el-dialog
         title="Upgrade Simpleui"
